WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
94892
[chromium] Fix lost context when textures are evicted
https://bugs.webkit.org/show_bug.cgi?id=94892
Summary
[chromium] Fix lost context when textures are evicted
Antoine Labour
Reported
2012-08-23 19:56:42 PDT
[chromium] Fix lost context when textures are evicted
Attachments
Patch
(8.49 KB, patch)
2012-08-23 20:26 PDT
,
Antoine Labour
no flags
Details
Formatted Diff
Diff
Patch
(8.54 KB, patch)
2012-08-23 20:57 PDT
,
Antoine Labour
no flags
Details
Formatted Diff
Diff
Patch for landing
(8.54 KB, patch)
2012-08-23 20:59 PDT
,
Antoine Labour
no flags
Details
Formatted Diff
Diff
Patch for landing
(8.54 KB, patch)
2012-08-23 21:00 PDT
,
Antoine Labour
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Antoine Labour
Comment 1
2012-08-23 20:26:27 PDT
Created
attachment 160313
[details]
Patch
James Robinson
Comment 2
2012-08-23 20:31:49 PDT
Comment on
attachment 160313
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=160313&action=review
R=me. I wish this didn't keep breaking :/
> Source/WebCore/ChangeLog:3 > + [chromium] Fix lost context when textures are evicted
ambitious title :)
> Source/WebKit/chromium/tests/CCLayerTreeHostTest.cpp:33 > +#include "CCSingleThreadProxy.h"
hmm, need this just for DebugScoped...? we don't do a good job of putting utility things in good headers - I should go move some of these out into better places
> Source/WebKit/chromium/tests/CCLayerTreeHostTest.cpp:2651 > + virtual void didCommitAndDrawFrame()
OVERRIDE on this and the others please (got bit today trying to refactor some tests :/)
Antoine Labour
Comment 3
2012-08-23 20:57:43 PDT
Created
attachment 160315
[details]
Patch
Antoine Labour
Comment 4
2012-08-23 20:59:11 PDT
(In reply to
comment #2
)
> (From update of
attachment 160313
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=160313&action=review
> > R=me. I wish this didn't keep breaking :/ > > > Source/WebCore/ChangeLog:3 > > + [chromium] Fix lost context when textures are evicted > > ambitious title :) > > > Source/WebKit/chromium/tests/CCLayerTreeHostTest.cpp:33 > > +#include "CCSingleThreadProxy.h" > > hmm, need this just for DebugScoped...? we don't do a good job of putting utility things in good headers - I should go move some of these out into better places > > > Source/WebKit/chromium/tests/CCLayerTreeHostTest.cpp:2651 > > + virtual void didCommitAndDrawFrame() > > OVERRIDE on this and the others please (got bit today trying to refactor some tests :/)
Done. I didn't do big refactorings here, because I think I'd like to merge this. I have a follow up that adds OVERRIDEs everywhere in this file.
Antoine Labour
Comment 5
2012-08-23 20:59:38 PDT
Created
attachment 160316
[details]
Patch for landing
Antoine Labour
Comment 6
2012-08-23 21:00:30 PDT
Created
attachment 160317
[details]
Patch for landing
Antoine Labour
Comment 7
2012-08-23 21:03:13 PDT
(In reply to
comment #4
)
> I have a follow up that adds OVERRIDEs everywhere in this file.
https://bugs.webkit.org/show_bug.cgi?id=94894
WebKit Review Bot
Comment 8
2012-08-23 21:59:39 PDT
Comment on
attachment 160317
[details]
Patch for landing Clearing flags on attachment: 160317 Committed
r126540
: <
http://trac.webkit.org/changeset/126540
>
WebKit Review Bot
Comment 9
2012-08-23 21:59:43 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug